# BAD

./: .gitignore  CMakeLists.txt  README.md
models/read_wav_file/: readWavFile.cpp  readWavFile.h
src/: main.cpp
